--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -66,13 +66,16 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Flowchart.cs" />
+    <Compile Include="FlowChartObject\Block.cs" />
     <Compile Include="Helpers.cs" />
+    <Compile Include="FlowChartObject\Object.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FlowChartObject\ChartBaseObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
